@@ -422,7 +422,11 @@ int pbsd_init(
     sigaction(SIGSYS,  &act, NULL);
     }
 
+#ifdef NO_SIGCHLD
+  act.sa_handler = SIG_DFL;
+#else
   act.sa_handler = catch_child;
+#endif
 
   if (sigaction(SIGCHLD,&act,&oact) != 0) 
     {
@@ -1521,7 +1525,11 @@ static void catch_child(
       {
       if ((LOGLEVEL >= 5) && (errno != ECHILD))
         {
+#ifdef NO_SIGCHLD
+        log_err(errno,"catch_child","waitpid failed");
+#else
         DBPRT(("catch_child waitpid failed %d\n", errno));
+#endif
         }
       return;
       } 
@@ -1533,7 +1541,18 @@ static void catch_child(
 
     if (LOGLEVEL >= 5)
       {
+#ifdef NO_SIGCHLD
+      sprintf(log_buffer,"caught SIGCHLD for pid %d",
+        pid);
+        
+      log_record(
+        PBSEVENT_SYSTEM | PBSEVENT_FORCE,
+        PBS_EVENTCLASS_SERVER,
+        msg_daemonname,
+        log_buffer);
+#else
       DBPRT(("catch_child caught pid %d\n", pid));
+#endif
       }
      
     found = FALSE;
@@ -1550,6 +1569,23 @@ static void catch_child(
 
         svr_delay_entry++;	/* see next_task() */
         found = TRUE;
+
+        if (LOGLEVEL >= 5)
+          {
+#ifdef NO_SIGCHLD
+          sprintf(log_buffer,"work task found for pid %d",
+            pid);
+
+          log_record(
+            PBSEVENT_SYSTEM | PBSEVENT_FORCE,
+            PBS_EVENTCLASS_SERVER,
+            msg_daemonname,
+            log_buffer);
+#else
+          DBPRT(("catch_child found work task found for pid %d\n", pid));
+#endif
+          }
+
         }
 
       ptask = (struct work_task *)GET_NEXT(ptask->wt_linkall);
@@ -1557,7 +1593,14 @@ static void catch_child(
       
     if ((found == FALSE) && (LOGLEVEL >= 5))
       {
+#ifdef NO_SIGCHLD
+      sprintf(log_buffer,"no work task found for pid %d",
+        pid);
+
+      log_err(-1,"catch_child",log_buffer);
+#else
       DBPRT(("catch_child no work task found for pid %d\n", pid));
+#endif
       }
     }
 
@@ -1565,7 +1608,31 @@ static void catch_child(
   }  /* END catch_child() */
 
 
+/*
+ * check_children() - Check for child proccess that have exited
+ *
+ */
 
+#ifdef NO_SIGCHLD
+void check_children(
+
+  )
+
+  {
+  if (LOGLEVEL >= 5)
+    {
+    log_record(
+      PBSEVENT_SYSTEM | PBSEVENT_FORCE,
+      PBS_EVENTCLASS_SERVER,
+      msg_daemonname,
+      "check_children called");
+    }
+
+  catch_child(0);
+  
+  return;
+  } /* END check_children() */
+#endif
 
 /*
  * changs_logs - signal handler for SIGHUP
