@@ -18,6 +18,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature
       documentation now.
   e - added --enable-quickcommit to allow qsub to combine the ready to commit
       and commit phases into 1 network transmission.
+  e - added --enable-nochildsignal to allow pbs_server to use inline checking
+      for SIGCHLD instead of using the signal handler.
 
 2.2.1
   b - fix a bug where dependent jobs get put on hold when the previous job has
